--- a/react-app/src/scss/_variables.scss
+++ b/react-app/src/scss/_variables.scss
@@ -9,3 +9,6 @@ $blue-google: #1356c7;
 
 $main-font: "Inter", sans-serif;
 $fakeflix-font: "Bebas Neue", cursive;
+
+$coxedge-primary-blue: #002f87;
+$coxedge-secondary-blue: #029ae0;
