--- a/react-app/src/components/DetailModal/detailModal.scss
+++ b/react-app/src/components/DetailModal/detailModal.scss
@@ -124,7 +124,7 @@
       justify-content: center;
       align-items: center;
       min-width: 120px;
-      background-color: $red;
+      background-color: $coxedge-secondary-blue;
       color: $white;
       padding: 10px 16px;
       margin-left: 0;
@@ -148,7 +148,7 @@
       }
 
       &:hover {
-        background-color: darken($red, 5);
+        background-color: darken($coxedge-secondary-blue, 5);
       }
 
       span {
