--- a/react-app/src/index.scss
+++ b/react-app/src/index.scss
@@ -11,6 +11,6 @@
 
 body {
   font-family: $main-font;
-  background-color: $black;
+  background-image: linear-gradient(90deg, black, $coxedge-primary-blue);
   color: $white;
 }
