--- a/react-app/src/components/PlayAnimation/playAnimation.scss
+++ b/react-app/src/components/PlayAnimation/playAnimation.scss
@@ -49,7 +49,7 @@
         color: #f3f3f3;
     }
     20% {
-        color: $macrometaBlue;
+        color: $coxedge-primary-blue;
         text-shadow: none;
         transform: scale(1.1, 1.1);
     }
@@ -58,7 +58,7 @@
     }
     80% {
         opacity: 0;
-        color: $macrometaBlue;
+        color: $coxedge-primary-blue;
         transform: scale(0.85, 0.9);
     }
     100% {
