--- a/react-app/src/components/Navbar/navbar.scss
+++ b/react-app/src/components/Navbar/navbar.scss
@@ -261,7 +261,7 @@
             position: absolute;
             opacity: 0;
             top: 100px;
-            right: 0;
+            // right: 0;
             padding: 10px 0;
             min-width: auto;
             white-space: nowrap;
@@ -276,14 +276,14 @@
             }
 
             &.active {
-                opacity: 1;
-                top: 55px;
+                opacity: 0.9;
+                top: 28px;
                 pointer-events: all;
             }
             
             li {
                 color: $white;
-                padding: 5px 15px;
+                padding: 8px 15px;
                 text-decoration: none;
                 display: block;
         
